src/app/common/components/BrowserRoot/NavBar.scss
/*
	componentPath: src/app/common/components/BrowserRoot/NavBar
	cssComponentId: nav-bar_yh8orf
*/

.nav-bar_yh8orf {
	flex: 0 0 auto;
	display: flex;
	flex-flow: column;
	border-right: 1px solid #ccc;
	background-color: #eaeaea;
}
.nav-bar_yh8orf > ol {
	flex: 1 1 auto;
	display: flex;
	flex-flow: column;
}
.nav-bar_yh8orf > .download-app {
	flex: 0 0 auto;
}
.nav-bar_yh8orf > .download-app > a {
	display: block;
	text-decoration: none;
}
.nav-bar_yh8orf > .download-app > a > span {
	display: block;
	width: 200px;
	margin: 0 auto 10px auto;
	text-align: center;
	font-family: 'Museo Sans (500)';
	font-size: 15pt;
}
.nav-bar_yh8orf > .download-app > a > img {
	display: block;
	width: 75%;
	margin: 0 auto 20px auto;
}
.nav-bar_yh8orf > .footer_ink40x {
	flex: 0 0 auto;
	border-top: none;
}

